# ChangeLog file for java
# This file is updated with Maddlog

* Fri Oct 14 2011 Fabian Groffen <fabian@cwi.nl>
- The embedded monet instance capability of MonetConnection was removed.
- Bump JDBC version to 2.0 (Liberica).  JDBC now implements JDBC4 which
  makes it possible to be built with Java 6 and up.  Java 5 and before
  are no longer supported, and can use the 1.x releases of the driver.

* Thu Sep  1 2011 Fabian Groffen <fabian@cwi.nl>
- INTERVAL columns are now treated as decimals, since they can have
  sub-second precision.
